refactor for new datafiles v2.0